clean up text and some images

--- a/src/services.njk
+++ b/src/services.njk
@@ -3,67 +3,95 @@ layout: layout.njk
 title: Services
 ---
 
-<h1 class="text-4xl mb-12 sr-only">{{ title }}</h1>
+<h1 class="text-5xl mb-12 sr-only">{{ title }}</h1>
+
 <div class="w-full lg:w-5/6 xl:w-3/5">
-    <p class="text-4xl md:text-5xl mb-24">
+    <p class="big-text">
         My primary focus is enabling clients to communicate effectively on the web.
     </p>
     <div class="flex flex-col sm:flex-row gap-8 mb-24">
         <div class="w-full md:w-1/2">
-            <h2 class="text-xl uppercase pb-6 font-bold">Services —</h2>
+            <h2 class="text-xl uppercase pb-6 font-bold star">Services</h2>
             <ul class="text-2xl md:text-4xl list-disc pl-8">
-                <li>Websites</li>
-                <li>E-Commerce</li>
-                <li>Consulting</li>
-                <li>Support</li>
+                <li class="leading-snug">Websites</li>
+                <li class="leading-snug">E-Commerce</li>
+                <li class="leading-snug">Consulting</li>
+                <li class="leading-snug">Support</li>
                 
             </ul>            
         </div>
         <div class="w-full md:w-1/2">
-            <h2 class="text-xl uppercase pb-6 font-bold">Capabilities —</h2>
+            <h2 class="text-xl uppercase pb-6 font-bold star">Capabilities</h2>
             <ul class="text-2xl md:text-4xl list-disc pl-8">
-                <li>Project Management</li>
-                <li>Research & Strategy</li>
-                <li>Frontend Development</li>
-                <li>Backend Development</li>
-                <li>CMS Implementation</li>
-                <li>Information Architecture</li>
-                <li>Web and UI Design</li>       
+                <li class="leading-snug">Project Management</li>
+                <li class="leading-snug">Research & Strategy</li>
+                <li class="leading-snug">Frontend Development</li>
+                <li class="leading-snug">Backend Development</li>
+                <li class="leading-snug">CMS Implementation</li>
+                <li class="leading-snug">Information Architecture</li>
+                <li class="leading-snug">Web and UI Design</li>       
             </ul>            
         </div>
     </div>
-    <p class="text-2xl md:text-4xl mb-20">
+    <div class="prose mb-20">
+        <p >
+            An average project usually costs between $5000 and $25,000, depending on the particulars of what is needed, and takes 6-16 weeks. While no two jobs are alike, the process usually goes something like this:
+        </p>
+        <h3 >Discovery</h3>   
+        <p>
+            Many projects benefit from a robust phase in which we can work together to articulate your goals, research solutions, and create a plan.
+        </p>
+        <h3>Design</h3>   
+        <p>
+            Design something something
+        </p>
+        <h3>Build</h3>   
+        <p>
+            I use modern development practices to turn the designs into a performant, accessible site. I emphasize simple solutions that are robust and easily maintainable for the long haul.
+        </p>
+        <h3>Post-Launch</h3>   
+        <p>
+            I am committed to your projects success and happy to provide post-launch support, training and bug fixes.
+        </p>    
+        <p>
+            I have also been brought in on many projects just to do the "build" phase, and am happy to be a cog in someone else's machine.
+        </p>
+    </div>
+    <!-- <p class="mb-12 md:w-3/5">
         An average project usually costs between $5000 and $25,000, depending on the particulars of what is needed, and take 6-16 weeks. While no two jobs are alike, the process usually goes something like this:
     </p>
-    <h3 class="text-xl uppercase pb-3 font-bold">Discovery</h3>   
-    <p class="mb-6">
+    <h3 class="text-xl uppercase pb-2 font-bold">Discovery</h3>   
+    <p class="mb-6 md:w-3/5">
         Many projects benefit from a robust phase in which we can work together to articulate your goals, research solutions, and create a plan.
     </p>
-    <h3 class="text-xl uppercase pb-3 font-bold">Design</h3>   
-    <p class="mb-6">
+    <h3 class="text-xl uppercase pb-2 font-bold">Design</h3>   
+    <p class="mb-6 md:w-3/5">
         Design something something
     </p>
-    <h3 class="text-xl uppercase pb-3 font-bold">Build</h3>   
-    <p class="mb-6">
+    <h3 class="text-xl uppercase pb-2 font-bold">Build</h3>   
+    <p class="mb-6 md:w-3/5">
         I use modern development practices to turn the designs into a performant, accessible site. I emphasize simple solutions that are robust and easily maintainable for the long haul.
     </p>
-    <h3 class="text-xl uppercase pb-3 font-bold">Post-Launch</h3>   
-    <p class="mb-12">
+    <h3 class="text-xl uppercase pb-2 font-bold">Post-Launch</h3>   
+    <p class="mb-12 md:w-3/5">
         I am committed to your projects success and happy to provide post-launch support, training and bug fixes.
     </p>    
-    <p class="text-xl mb-24">
+    <p class="text-xl mb-24 md:w-3/5">
         I have also been brought in on many projects just to do the "build" phase, and am happy to be a cog in someone else's machine.
-    </p>
+    </p> -->
 </div>
-<div class="w-full md:w-3/5 border-t border-gray-200 dark:border-gray-900 py-16">
-    <h2 class="text-xl uppercase md:pb-6 font-bold">A note on wordpress</h2>
-    <p class="text-xl mb-6">
-        For most clients, especially in the arts and non-profit spaces, I often recommend the popular Wordpress CMS as a solution that allows non-technical users to maintain and update the content on their site. Maybe not a big surprise, seeing as how Wordpress is estimated to power over 40% of the modern web. 
-        
-    </p>
-    <p class="text-xl mb-24">
-        Many people who work with the web already have some experience with Wordpress. Additionally, It is supported by a large community of developers and hosting providers, as well as a wide array of plugins that can add extensive functionality.        
-    </p>
+<div class="w-full border-t border-gray-200 dark:border-gray-900 py-16">
+    <div class="md:w-3/5">
+        <h2 class="text-xl uppercase md:pb-6 font-bold">A note on wordpress</h2>
+        <p class="text-xl mb-6">
+            For most clients, especially in the arts and non-profit spaces, I often recommend the popular Wordpress CMS as a solution that allows non-technical users to maintain and update the content on their site. Maybe not a big surprise, seeing as how Wordpress is estimated to power over 40% of the modern web. 
+            
+        </p>
+        <p class="text-xl mb-24">
+            Many people who work with the web already have some experience with Wordpress. Additionally, It is supported by a large community of developers and hosting providers, as well as a wide array of plugins that can add extensive functionality.        
+        </p>
+    </div>
+
     
 </div>
 <!-- <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 my-12 gap-x-8 gap-y-16 ">
