--- a/src/index.njk
+++ b/src/index.njk
@@ -3,7 +3,7 @@ layout: layout.njk
 title: Home
 ---
 
-<p class="text-4xl md:text-5xl w-full lg:w-3/5 mb-24">
+<p class="big-text w-full lg:w-3/5">
     I am a web developer in Oakland, CA focused on helping arts and environmental organizations, non-profits and small businesses communicate on the web.        
 </p>
 
@@ -44,7 +44,7 @@ title: Home
 </div> -->
 
 
-<h2 class="text-xl uppercase md:pb-12 font-bold">Featured Work —</h2>
+<h2 class="text-xl uppercase md:pb-12 font-bold star">Featured Work</h2>
 
 <div class="mb-16 md:mb-32">
     <div class="flex flex-col md:flex-row items-center justify-between">
@@ -52,7 +52,7 @@ title: Home
             <img class="rounded-xl w-full mb-4" src="/assets/images/ringo/ringo-main.jpg">        
         </div>
         <div class="md:w-2/5 flex flex-col justify-center items-start">
-            <h2 class="text-xl uppercase pb-3"><a class="cursor-pointer" href="/work/ringo-studio">Ringo Studio</a></h2>
+            <h2 class="text-xl uppercase pb-3 font-semibold"><a class="cursor-pointer" href="/work/ringo-studio">Ringo Studio</a></h2>
             <p class="text-lg">Each project I undertake is an opportunity to showcase my passion and expertise, and I am dedicated to delivering top-notch solutions that exceed my clients' expectations.</p>        
             <a class="pill-button" href="/work/ringo-studio">View project</a>
         </div>
@@ -61,10 +61,10 @@ title: Home
 <div class="mb-16 md:mb-32">
     <div class="flex flex-col md:flex-row-reverse items-center justify-between">
         <div class="w-full md:w-3/5 md:pl-16">
-            <img class="rounded-xl w-full mb-4" src="/assets/images/kg/image-2.jpg">        
+            <img class="rounded-xl w-full mb-4" src="/assets/images/kg/image-1.png">        
         </div>
         <div class="w-full md:w-2/5 flex flex-col justify-center items-start">
-            <h2 class="text-xl uppercase pb-3"><a class="cursor-pointer" href="/work/kessenick-gamma">Kessenick Gamma</a></h2>
+            <h2 class="text-xl uppercase pb-3 font-semibold"><a class="cursor-pointer" href="/work/kessenick-gamma">Kessenick Gamma</a></h2>
             <p class="text-lg">Each project I undertake is an opportunity to showcase my passion and expertise, and I am dedicated to delivering top-notch solutions that exceed my clients' expectations.</p>        
             <a class="pill-button" href="/work/kessenick-gamma">View project</a>
         </div>
@@ -76,16 +76,16 @@ title: Home
             <img class="rounded-xl w-full mb-4" src="/assets/images/bampfa/bampfa-building.jpg">        
         </div>
         <div class="w-full md:w-2/5 flex flex-col justify-center items-start">
-            <h2 class="text-xl uppercase pb-3"><a class="cursor-pointer" href="/work/bampfa">BAMPFA</a></h2>
+            <h2 class="text-xl uppercase pb-3 font-semibold"><a class="cursor-pointer" href="/work/bampfa">BAMPFA</a></h2>
             <p class="text-lg">Each project I undertake is an opportunity to showcase my passion and expertise, and I am dedicated to delivering top-notch solutions that exceed my clients' expectations.</p>        
             <a class="pill-button" href="/work/bampfa">View project</a>
         </div>
     </div>    
 </div>
 <div class="flex flex-col p-4 items-center mb-16 md:mb-36 pb-12 px-4">
-    <a href="/work/everything/" class="text-xl text-center hover:text-white px-6 py-4 border border-black dark:border-white shadow-sm mb-4 cursor-pointer rounded-xl">View all work</a>
+    <a href="/work/everything/" class="text-xl text-center hover:text-white px-6 py-4 border border-black dark:border-white shadow-sm mb-8 cursor-pointer rounded-full hover:border-red-600">View all work</a>
     or select a category
-    <div class="flex flex-wrap gap-4 mt-4">
+    <div class="flex flex-wrap gap-4 mt-8">
         <a class="pill-button" href="">Arts Organizations</a>
         <a class="pill-button">Small Business</a>
         <a class="pill-button">Education</a>
