--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -126,14 +126,23 @@ a.link-white, .link-white > a {
     @apply transition-all hover:tracking-widest;
 }
 
+.big-text {
+    @apply text-4xl md:text-5xl md:leading-tight mb-24;
+}
+
 .pill-button {
     @apply px-3 py-1 rounded-full border border-black dark:border-white hover:border-red-500 dark:hover:border-red-500 cursor-pointer mt-4 flex flex-row gap-4; 
 }
 
 .pill-button svg {
-    @apply stroke-black stroke-2 dark:stroke-white 
+    @apply stroke-black stroke-2 dark:stroke-white ;
 }
 
 .pill-button:hover svg {
-    @apply stroke-red-500 dark:stroke-red-500 
+    @apply stroke-red-500 dark:stroke-red-500;
+}
+
+.star:before {
+    content: url("data:image/svg+xml,%3Csvg width='30' height='30' viewBox='0 0 53 54' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M21.9633 4.04897C23.1554 -1.11944 30.5155 -1.11945 31.7075 4.04896L34.5243 16.2621C34.9804 18.2396 36.5866 19.7453 38.5894 20.0729L48.579 21.7067C54.1696 22.6211 54.1696 30.6612 48.579 31.5756L38.5894 33.2095C36.5866 33.537 34.9804 35.0427 34.5244 37.0202L31.7075 49.2334C30.5155 54.4018 23.1554 54.4018 21.9633 49.2334L19.1465 37.0202C18.6904 35.0427 17.0843 33.537 15.0815 33.2095L5.09182 31.5756C-0.498777 30.6613 -0.498792 22.6211 5.0918 21.7067L15.0815 20.0729C17.0843 19.7453 18.6904 18.2396 19.1465 16.2621L21.9633 4.04897Z' fill='black'/></svg%3E ");
+    padding-right: 6px;
 }
