--- a/src/_includes/work.njk
+++ b/src/_includes/work.njk
@@ -2,13 +2,12 @@
 layout: layout.njk
 ---
 
-<div class="flex flex-row justify-between w-full items-start">
-    <h1 class="text-4xl mb-12">{{ title }}</h1>
-</div>
+
 
 <div class="flex flex-col-reverse md:flex-row gap-8 mb-16">
-    <div class="w-full md:w-2/5 flex flex-col gap-8 items-start">
-        <span>{{ tech }}<br />{{ year }}</span>
+    <div class="w-full md:w-1/2 flex flex-col gap-4 prose dark:prose-invert items-start">
+        <h1 class="text-5xl font-extralight mb-0">{{ title }}</h1>        
+        <span>{{ tech }}, {{ year }}</span>
         {{ content | safe }}
         <div class="flex flex-col text-md">
             <div class="flex">
@@ -18,13 +17,13 @@ layout: layout.njk
                 {% endfor %}
             </div>
         </div>
-        <a class="pill-button" href="{{url}}">
+        <a class="pill-button no-underline flex items-center" href="{{url}}">
             Visit Site
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke-linecap="butt" stroke-linejoin="arcs"><g fill="none" fill-rule="evenodd"><path d="M18 14v5a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8c0-1.1.9-2 2-2h5M15 3h6v6M10 14L20.2 3.8"/></g></svg>
         </a>        
 
     </div>
-    <div class="w-full md:w-3/5">
+    <div class="w-full md:w-1/2">
         <img class="rounded-xl" src="{{ image }}" />
     </div>
 </div>
