content, star ending

--- a/src/index.njk
+++ b/src/index.njk
@@ -16,7 +16,7 @@ title: Home
         </div>
         <div class="md:w-2/5 flex flex-col justify-center items-start prose dark:prose-invert">
             <h2 class="text-xl uppercase font-bold"><a class="cursor-pointer no-underline" href="/work/ringo-studio">Ringo Studio</a></h2>
-            <p>A beautiful, immersive Wordpress site built for an architecural design firm in New York.</p>        
+            <p>A beautiful, immersive Wordpress site and web store built for an architecural design firm in New York.</p>        
             <a class="pill-button no-underline" href="/work/ringo-studio">View project</a>
         </div>
     </div>    
@@ -49,10 +49,10 @@ title: Home
     <a href="/work/everything/" class="text-xl font-bold md:text-center hover:text-white px-6 py-4 border border-black dark:border-white shadow-sm mb-8 cursor-pointer rounded-full hover:border-red-600">View all work</a>
     or select a category
     <div class="flex flex-wrap gap-4 mt-8">
-        <a class="pill-button" href="">Arts Organizations</a>
-        <a class="pill-button">Small Business</a>
-        <a class="pill-button">Education</a>
-        <a class="pill-button">The Environment</a>
+        <a class="pill-button" href="/work/arts">Arts Organizations</a>
+        <a class="pill-button" href="/work/business">Small Business</a>
+        <a class="pill-button" href="/work/education">Education</a>
+        <a class="pill-button" href="/work/environment">The Environment</a>
     </div>
 </div>
 
