--- a/src/services.njk
+++ b/src/services.njk
@@ -37,83 +37,36 @@ title: Services
         <p >
             An average project usually costs between $5000 and $25,000, depending on the particulars of what is needed, and takes 6-16 weeks. While no two jobs are alike, the process usually goes something like this:
         </p>
-        <h3 class="text-xl uppercase font-bold star">Discovery</h3>   
+        <h3 class="text-xl uppercase font-bold">Discovery</h3>   
         <p>
             Many projects benefit from a robust phase in which we can work together to articulate your goals, research solutions, and create a plan.
         </p>
-        <h3 class="text-xl uppercase font-bold star">Design</h3>   
+        <h3 class="text-xl uppercase font-bold">Design</h3>   
         <p>
-            Design something something
+            For simple projects I can often do the design myself, for more involved projects or those requiring a rebrand, I will bring on a designer to work with us to make your site beautiful.
         </p>
-        <h3 class="text-xl uppercase font-bold star">Build</h3>   
+        <h3 class="text-xl uppercase font-bold">Build</h3>   
         <p>
             I use modern development practices to turn the designs into a performant, accessible site. I emphasize simple solutions that are robust and easily maintainable for the long haul.
         </p>
-        <h3 class="text-xl uppercase font-bold star">Post-Launch</h3>   
+        <h3 class="text-xl uppercase font-bold">Post-Launch</h3>   
         <p>
             I am committed to your projects success and happy to provide post-launch support, training and bug fixes.
         </p>   
-        <h3 class="text-xl uppercase font-bold star">A la carte</h3>   
+        <h3 class="text-xl uppercase font-bold">A la carte</h3>   
         <p>
-            Any of the above stages can be de-coupled from the process. I have been brought in on many projects just to do the "build" phase, and am happy to be a cog in someone else's machine. Likewise, for larger projects I often recommend a standalone "discovery" phase as its own project.
+            Any of the above stages can be de-coupled from the process. I have been brought in on many projects just to do the "build" phase, and am happy to be a cog in someone else's machine. Likewise, for larger projects I might recommend a standalone "discovery" phase as its own project.
         </p>
     </div>
-    <!-- <p class="mb-12 md:w-3/5">
-        An average project usually costs between $5000 and $25,000, depending on the particulars of what is needed, and take 6-16 weeks. While no two jobs are alike, the process usually goes something like this:
-    </p>
-    <h3 class="text-xl uppercase pb-2 font-bold">Discovery</h3>   
-    <p class="mb-6 md:w-3/5">
-        Many projects benefit from a robust phase in which we can work together to articulate your goals, research solutions, and create a plan.
-    </p>
-    <h3 class="text-xl uppercase pb-2 font-bold">Design</h3>   
-    <p class="mb-6 md:w-3/5">
-        Design something something
-    </p>
-    <h3 class="text-xl uppercase pb-2 font-bold">Build</h3>   
-    <p class="mb-6 md:w-3/5">
-        I use modern development practices to turn the designs into a performant, accessible site. I emphasize simple solutions that are robust and easily maintainable for the long haul.
-    </p>
-    <h3 class="text-xl uppercase pb-2 font-bold">Post-Launch</h3>   
-    <p class="mb-12 md:w-3/5">
-        I am committed to your projects success and happy to provide post-launch support, training and bug fixes.
-    </p>    
-    <p class="text-xl mb-24 md:w-3/5">
-        I have also been brought in on many projects just to do the "build" phase, and am happy to be a cog in someone else's machine.
-    </p> -->
 </div>
 <div class="w-full border-t border-gray-200 dark:border-gray-900 py-16">
     <div class="prose dark:prose-invert">
         <h2 class="text-xl uppercase font-bold star">A note on wordpress</h2>
         <p>
             For most clients, especially in the arts and non-profit spaces, I often recommend the popular Wordpress CMS as a solution that allows non-technical users to maintain and update the content on their site. Maybe not a big surprise, seeing as how Wordpress is estimated to power over 40% of the modern web. 
-            
         </p>
         <p>
             Many people who work with the web already have some experience with Wordpress. Additionally, It is supported by a large community of developers and hosting providers, as well as a wide array of plugins that can add extensive functionality.        
         </p>
-    </div>
-
-    
+    </div>    
 </div>
-<!-- <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 my-12 gap-x-8 gap-y-16 ">
-    <div>
-        <h3 class="text-2xl mb-8">Research</h3>
-        <p class="text-lg">Your website is not the first website, and there is much to be learned from </p>
-    </div>
-    <div>
-        <h3 class="text-2xl pb-4">Content</h3>
-        <p class="text-lg">High quality, well organized content is the foundation of a successful website. I can help you organize your content into a clear “information architecture” that will allow your users to easily find whatever they are looking for.</p>
-    </div>    
-    <div>
-        <h3 class="text-2xl pb-4">Design</h3>
-        <p class="text-lg">Good design makes a project shine, whether it is a new logo and identity, just the right font, or a comprehensive design system. Some design work I can do myself, sometimes it makes more sense to partner with a dedicated designer (or maybe you already have one in mind!).</p>
-    </div>
-    <div>
-        <h3 class="text-2xl pb-4">Development</h3>
-        <p class="text-lg">I write code and build sites with an eye towards simplicity, usability and maintainability over the long term. Ideally, you could fire me and a new developer could come in and easily understand what I have built and how to continue with the work.</p>
-    </div>    
-    <div>
-        <h3 class="text-2xl pb-4">Support</h3>
-        <p class="text-lg">Many smaller organizations often don't have the expertise or resources to maintenance on their own after launch. I provide ongoing as-needed support to many clients.</p>
-    </div>           
-</div> -->
