fix form text colors

--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -37,16 +37,16 @@
       <p class="text-2xl mb-8">
         Interested in working together? Want to talk about the internet? Use the form below to say hi, or email me directly at <a class="underline" href="mailto:hello@alexharris.online">hello@alexharris.online</a>
       </p>       
-      <form class="flex flex-col items-start w-full" name="contact" netlify>
+      <form class="flex flex-col items-start w-full text-black" name="contact" netlify>
         <label class="w-full pb-4">
-          <div class="pb-3">Your Email</div>
+          <div class="pb-3 dark:text-white">Your Email</div>
           <input class="w-full rounded-xl border border-black h-12 p-2" type="email" name="email" required/>
         </label>
         <label class="w-full pb-4">
-          <div class="pb-3">Message</div>
+          <div class="pb-3 dark:text-white">Message</div>
           <textarea class="w-full rounded-xl border border-black h-24 p-2"name="message" required></textarea>
         </label>
-        <button class="border border-black dark:border-white px-4 py-2 hover:bg-black hover:text-white cursor-pointer rounded-xl" type="submit">Send Message</button>
+        <button class="border dark:text-white border-black dark:border-white px-4 py-2 hover:bg-black hover:text-white cursor-pointer rounded-xl" type="submit">Send Message</button>
       </form>    
     </div>     
     <!-- <nav class="flex items-center text-black dark:text-white justify-center gap-8">  
