new work section, add dbnl

--- a/src/index.njk
+++ b/src/index.njk
@@ -15,7 +15,7 @@ title: Home
             <img class="rounded-xl w-full mb-4" src="/assets/images/ringo/ringo-main.jpg">        
         </div>
         <div class="md:w-2/5 flex flex-col justify-center items-start prose dark:prose-invert">
-            <h2 class="text-xl uppercase font-bold"><a class="cursor-pointer no-underline" href="/work/ringo-studio">Ringo Studio</a></h2>
+            <h2 class="text-2xl"><a class="cursor-pointer no-underline" href="/work/ringo-studio">Ringo Studio</a></h2>
             <p>A beautiful, immersive Wordpress site and web store built for an architecural design firm in New York.</p>        
             <a class="pill-button no-underline" href="/work/ringo-studio">View project</a>
         </div>
@@ -27,7 +27,7 @@ title: Home
             <img class="rounded-xl w-full mb-4" src="/assets/images/lightsource/image-3.jpg">        
         </div>
         <div class="w-full md:w-2/5 flex flex-col justify-center items-start prose dark:prose-invert">
-            <h2 class="text-xl uppercase bold"><a class="cursor-pointer no-underline" href="/work/lightsource">Lightsource</a></h2>
+            <h2 class="text-2xl"><a class="cursor-pointer no-underline" href="/work/lightsource">Lightsource</a></h2>
             <p>A custom Wordpress theme for a small SF arts business, with bespoke ecommerce functionality.</p>        
             <a class="pill-button no-underline" href="/work/lightsource">View project</a>
         </div>
@@ -39,20 +39,19 @@ title: Home
             <img class="rounded-xl w-full mb-4" src="/assets/images/ucwaterportal/image-1.jpg">        
         </div>
         <div class="w-full md:w-2/5 flex flex-col justify-center items-start prose dark:prose-invert">
-            <h2 class="text-xl uppercase font-bold"><a class="cursor-pointer no-underline" href="/work/uc-water-portal">UC Berkeley Water Research and Opportunities Portal</a></h2>
+            <h2 class="text-2xl"><a class="cursor-pointer no-underline" href="/work/uc-water-portal">UC Berkeley Water Research and Opportunities Portal</a></h2>
             <p class="text-lg">A directory for UC Berkeley students interested in finding water-related research, classes and opportunities.</p>        
             <a class="pill-button no-underline" href="/work/uc-water-portal">View project</a>
         </div>
     </div>    
 </div>
-<div class="flex flex-col items-start md:items-center mb-16 md:mb-36">
-    <a href="/work/everything/" class="text-xl font-bold md:text-center hover:text-white px-6 py-4 border border-black dark:border-white shadow-sm mb-8 cursor-pointer rounded-full hover:border-red-600">View all work</a>
+<div class="flex flex-col items-start md:items-center py-16 md:py-36 full-width">
+    <a href="/work/everything/" class="pill-button mb-6 text-2xl">View all work</a>
     or select a category
     <div class="flex flex-wrap gap-4 mt-8">
         <a class="pill-button" href="/work/arts">Arts Organizations</a>
         <a class="pill-button" href="/work/business">Small Business</a>
         <a class="pill-button" href="/work/education">Education</a>
-        <a class="pill-button" href="/work/environment">The Environment</a>
     </div>
 </div>
 
