--- a/src/_includes/work.njk
+++ b/src/_includes/work.njk
@@ -5,10 +5,17 @@ layout: layout.njk
 
 
 <div class="flex flex-col-reverse md:flex-row gap-8 mb-16">
-    <div class="w-full md:w-1/2 flex flex-col gap-4 prose dark:prose-invert items-start">
+    <div class="w-full md:w-1/2 flex flex-col gap-4 items-start">
         <h1 class="text-5xl font-extralight mb-0">{{ title }}</h1>        
         <span>{{ tech }}, {{ year }}</span>
-        {{ content | safe }}
+        <ul class="list-none">
+            {% for role in roles %}
+                <li>{{role}}</li>
+            {% endfor %}         
+        </ul>
+        <div class="">
+            {{ content | safe }}
+        </div>
         <div class="flex flex-col text-md">
             <div class="flex">
                 {% if partners|length %} With: {% endif %}
