--- a/src/services.njk
+++ b/src/services.njk
@@ -9,10 +9,10 @@ title: Services
     <p class="big-text">
         I provide expert web development strategy and solutions to help you effectively communicate online.
     </p>
-    <div class="flex flex-col sm:flex-row gap-8 mb-24 border-b border-gray-200 dark:border-gray-900 py-16">
+    <div class="flex flex-col sm:flex-row gap-8 mb-24 border-b border-gray-200 dark:border-gray-900 pb-16">
         <div class="w-full md:w-1/2">
             <h2 class="text-xl uppercase pb-6 font-bold star">Services</h2>
-            <ul class="text-2xl md:text-4xl list-disc pl-8">
+            <ul class="text-2xl md:text-3xl list-disc pl-8">
                 <li class="leading-snug">Websites</li>
                 <li class="leading-snug">E-Commerce</li>
                 <li class="leading-snug">Consulting</li>
@@ -22,7 +22,7 @@ title: Services
         </div>
         <div class="w-full md:w-1/2">
             <h2 class="text-xl uppercase pb-6 font-bold star">Capabilities</h2>
-            <ul class="text-2xl md:text-4xl list-disc pl-8">
+            <ul class="text-2xl md:text-3xl list-disc pl-8">
                 <li class="leading-snug">Project Management</li>
                 <li class="leading-snug">Research & Strategy</li>
                 <li class="leading-snug">Frontend Development</li>
@@ -34,7 +34,7 @@ title: Services
         </div>
     </div>
     <div class="prose mb-20 dark:prose-invert">
-        <p class="text-4xl leading-snug">
+        <p class="text-3xl leading-snug">
             An average project usually costs between $5000 and $25,000, depending on the particulars of what is needed, and takes 6-16 weeks. While no two jobs are alike, the process usually goes something like this:
         </p>
         <h3 class="text-xl uppercase font-bold">Discovery</h3>   
