--- a/src/work.njk
+++ b/src/work.njk
@@ -9,32 +9,31 @@ permalink: /work/{{ tag }}/
 ---
 
 
-<h1 class="text-5xl mb-12">{{ title }}</h1>
-<div class="flex flex-wrap gap-4 my-16">
+<h1 class="text-5xl mb-6">{{ title }}</h1>
+<div class="flex flex-wrap gap-4 my-6">
     <a {% if page.url == '/work/everything/' %} aria-current="page" {% endif %} class="pill-button" href="/work/everything">Everything</a>
     <a {% if page.url == '/work/arts/' %} aria-current="page" {% endif %} class="pill-button" href="/work/arts">Arts Organizations</a>
     <a {% if page.url == '/work/business/' %} aria-current="page" {% endif %} class="pill-button" href="/work/business">Small Business</a>
     <a {% if page.url == '/work/education/' %} aria-current="page" {% endif %} class="pill-button" href="/work/education">Education</a>
-    <a {% if page.url == '/work/environment/' %} aria-current="page" {% endif %} class="pill-button" href="/work/environment">Environment</a>
 </div>
-    {% set taglist = collections[ tag ] %}
+<div class="w-full full-width">
+    {% set taglist = collections[ tag ] | sort(attribute='data.year') | reverse %}
     {% for post in taglist %}
-        <div class="flex flex-col md:flex-row gap-4 md:gap-8 border-t border-gray-200 dark:border-gray-900 py-6 md:py-12">
-            <div class="w-full md:w-3/5">
-                <a href="{{post.url}}">
-                    <img class="w-full rounded-xl" src="{{post.data.image}}" />
-                </a>
-            </div>
-            <div class="flex flex-col items-start relative w-full md:w-2/5">
-                <h2 class="text-2xl md:text-3xl pb-2 md:pb-3"><a class="hover:text-red-400 dark:hover:text-red-600" href="{{ post.url }}">{{ post.data.title }}</a></h2>
-                <span class="text-md mb-6">{{post.data.tech}}</span>
-                <a class="pill-button" href="{{post.url}}">Learn More</a>
-                <a class="absolute top-0 right-0" href="{{post.data.url}}" target="_blank">
-                    <svg class="stroke-black dark:stroke-white hover:stroke-red-500 dark:hover:stroke-red-500" xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="stroke-black dark:stroke-white hover:stroke-red-600 stroke-width-1" viewBox="0 0 24 24" fill="none" stroke-linecap="butt" stroke-linejoin="arcs"><g fill="none" fill-rule="evenodd"><path d="M18 14v5a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8c0-1.1.9-2 2-2h5M15 3h6v6M10 14L20.2 3.8"/></g></svg>                    
-                </a>
-            </div>
-            
+    <div class="flex flex-row space-between px-4 md:px-8 py-4 items-center gap-4 md:gap-8 w-full block border-t border-gray-200 hover:bg-gray-100 dark:border-gray-900 text-xl md:text-2xl">
+        <div class="w-2/12 md:w-1/12">
+            {{post.data.year}}
+        </div>            
+        <div class="w-7/12 md:w-4/12 text-left">
+            <a href="{{post.url}}">{{post.data.title}}</a>
         </div>
+        
+        <div class="w-4/12 hidden md:block">
+            {{post.data.tech}}
+        </div>     
+        <a href="{{post.url}}" class="w-3/12 md:w-2/12 pill-button pill-button-outline">
+            Details
+        </a>
+    </div>
     {% endfor %}
 
-
+</div>
