home page thing

--- a/src/index.njk
+++ b/src/index.njk
@@ -44,10 +44,10 @@ title: Home
             {% pillbutton page, 'View project', '/work/uc-water-portal/' %}         </div>
     </div>    
 </div>
-<div class="flex flex-col items-start md:items-center py-16 md:py-18 full-width">
+<div class="flex flex-col items-center  text-center p-8 full-width">
     {% pillbutton page, 'View All Work', '/work/everything/' %} 
     <div class="pt-4">— or —</div>
-    <div class="flex flex-wrap gap-4 mt-4">
+    <div class="flex flex-col md:flex-row gap-4 mt-4">
         <a class="" href="/work/arts">Arts Organizations</a>
         <a class="" href="/work/business">Small Business</a>
         <a class="" href="/work/education">Education</a>
