--- a/src/index.njk
+++ b/src/index.njk
@@ -3,15 +3,16 @@ layout: layout.njk
 title: Home
 ---
 
-<p class="big-text w-full lg:w-3/5">
-    Web development in Oakland, CA, with a focus on helping arts and environmental organizations, non-profits and small businesses communicate online.        
-</p>
+<div class="w-3/5">
+    {% bigtext %}Web development in Oakland, CA, with a focus on helping arts and environmental organizations, non-profits and small businesses communicate online.{% endbigtext %}
+</div>
 
-<h2 class="text-xl uppercase pb-12 font-bold star">Featured Work</h2>
 
-<div class="mb-16 md:mb-32">
+<!-- <h2 class="text-xl uppercase py-12 font-bold mx-auto text-center">Featured Work</h2> -->
+
+<div class="mt-24 mb-16 md:mb-32 full-width px-4">
     <div class="flex flex-col md:flex-row items-center justify-between">
-        <div class="md:w-3/5 md:pr-16 pb-4">
+        <div class="md:w-3/5 md:pr-12 pb-4">
             <img class="rounded-xl w-full mb-4" src="/assets/images/ringo/ringo-main.jpg">        
         </div>
         <div class="md:w-2/5 flex flex-col justify-center items-start prose dark:prose-dark">
@@ -21,9 +22,9 @@ title: Home
         </div>
     </div>    
 </div>
-<div class="mb-16 md:mb-32">
+<div class="mb-16 md:mb-32 full-width px-4">
     <div class="flex flex-col md:flex-row-reverse items-center justify-between">
-        <div class="w-full md:w-3/5 md:pl-16 pb-4">
+        <div class="w-full md:w-3/5 md:pl-12 pb-4">
             <img class="rounded-xl w-full mb-4" src="/assets/images/lightsource/image-3.jpg">        
         </div>
         <div class="w-full md:w-2/5 flex flex-col justify-center items-start prose dark:prose-dark">
@@ -33,9 +34,9 @@ title: Home
         </div>
     </div>    
 </div>
-<div class="mb-16 md:mb-32">
+<div class="mb-16 md:mb-32 full-width px-4">
     <div class="flex flex-col md:flex-row items-center justify-between">
-        <div class="w-full md:w-3/5 md:pr-16 pb-4">
+        <div class="w-full md:w-3/5 md:pr-12 pb-4">
             <img class="rounded-xl w-full mb-4" src="/assets/images/ucwaterportal/image-1.jpg">        
         </div>
         <div class="w-full md:w-2/5 flex flex-col justify-center items-start prose dark:prose-dark">
