--- a/src/_includes/post.njk
+++ b/src/_includes/post.njk
@@ -2,9 +2,6 @@
 layout: layout.njk
 ---
 
-<article>
-    <h1 class="text-5xl mb-12">{{ title }}</h1>
-    <div class="prose dark:prose-dark mb-24">
-        {{ content | safe}}
-    </div>
+<article class="prose dark:prose-dark mb-24 mx-auto">
+    {{ content | safe}}
 </article>
