--- a/src/_includes/page.njk
+++ b/src/_includes/page.njk
@@ -2,6 +2,6 @@
 layout: layout.njk
 ---
 
-<div class="prose dark:prose-dark pt-24 mb-24 mx-auto">
+<div class="prose dark:prose-dark pt-24 mb-24">
     {{ content | safe}}
 </div>
