--- a/src/services.njk
+++ b/src/services.njk
@@ -4,7 +4,8 @@ title: Services
 ---
 
 <h1 class="hidden">Services</h1>
-{% bigtext %}I provide expert web development strategy and solutions to help you effectively communicate online.{% endbigtext %}
+
+{% bigtext %}I provide expert web development, strategy and solutions to help you effectively communicate online.{% endbigtext %}
 
 <div class="flex flex-col sm:flex-row gap-4 mb-6">
     <div class="w-full md:w-1/2">
@@ -32,28 +33,28 @@ title: Services
 
 <p>An average project usually costs between $5000 and $25,000, depending on the particulars of what is needed, and takes 6-16 weeks. While no two jobs are alike, the process usually goes something like this:</p>
 
-<div class="full-width grid grid-cols-3 gap-4 mx-auto mt-16">
-    <div class="card border border-blue-800 dark:border-white p-6 rounded-xl prose dark:prose-dark">
+<div class="full-width grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mx-auto mt-16">
+    <div class="card border border-blue-800 dark:border-white p-6 rounded-xl prose dark:prose-dark bg-yellow-100 dark:bg-yellow-800">
         <h2 class="mb-2">1. Discovery</h2>
         <p>Many projects benefit from a robust phase in which we can work together to articulate your goals, discuss strategy, and create a plan.</p>
     </div>
-    <div class="card border border-blue-800 dark:border-white p-6 rounded-xl prose dark:prose-dark">
+    <div class="card border border-blue-800 dark:border-white p-6 rounded-xl prose dark:prose-dark bg-yellow-100 dark:bg-yellow-800">
         <h2 class="mb-2">2. Design</h2>
         <p>For simple projects I can often do the design myself, for more involved projects or those requiring a rebrand, I will bring on a designer to work with us to make your site beautiful.</p>
     </div>
-    <div class="card border border-blue-800 dark:border-white p-6 rounded-xl prose dark:prose-dark">
+    <div class="card border border-blue-800 dark:border-white p-6 rounded-xl prose dark:prose-dark bg-yellow-100 dark:bg-yellow-800">
         <h2 class="mb-2">3. Build</h2>
         <p>I use modern development practices to turn the designs into a performant, accessible site. I emphasize simple solutions that are robust and keep things simple and maintainable for the long term.</p>
     </div>
-    <div class="card border border-blue-800 dark:border-white p-6 rounded-xl prose dark:prose-dark">
+    <div class="card border border-blue-800 dark:border-white p-6 rounded-xl prose dark:prose-dark bg-yellow-100 dark:bg-yellow-800">
         <h2 class="mb-2">4. Launch</h2>
         <p>A good launch involves finalizing content entry, thorough QA, and a smooth go live process.</p>
     </div>
-    <div class="card border border-blue-800 dark:border-white p-6 rounded-xl prose dark:prose-dark">
+    <div class="card border border-blue-800 dark:border-white p-6 rounded-xl prose dark:prose-dark bg-yellow-100 dark:bg-yellow-800">
         <h2 class="mb-2">5. Post-Launch</h2>
         <p>I am committed to your projects long term success and am happy to provide post-launch maintenance, support, training and bug fixes.</p>
     </div>    
-    <div class="card border border-blue-800 dark:border-white p-6 rounded-xl prose dark:prose-dark">
+    <div class="card border border-blue-800 dark:border-white p-6 rounded-xl prose dark:prose-dark bg-yellow-100 dark:bg-yellow-800">
         <h2 class="mb-2">A la carte</h2>
         <p>Any of the above stages can be de-coupled from the rest of the process. I have been brought in on many projects just to do the "build" phase, and am a willing and communicative collaborator.</p>
     </div>                         
