remove about, clean up homepage

--- a/src/index.njk
+++ b/src/index.njk
@@ -1,5 +1,5 @@
 ---
-layout: layout.njk
+layout: page.njk
 title: Home
 ---
 
@@ -10,42 +10,42 @@ title: Home
 
 <!-- <h2 class="text-xl uppercase py-12 font-bold mx-auto text-center">Featured Work</h2> -->
 
-<div class="mt-24 mb-16 md:mb-32 full-width px-4">
+<div class="mt-24 mb-16 md:mb-32 full-width px-4 mx-auto">
     <div class="flex flex-col md:flex-row items-center justify-between">
         <div class="md:w-3/5 md:pr-12 pb-4">
-            <img class="rounded-xl w-full mb-4" src="/assets/images/ringo/ringo-main.jpg">        
+            <img class="rounded-xl w-full mb-4" src="/assets/images/ringo/image-1.jpg">        
         </div>
-        <div class="md:w-2/5 flex flex-col justify-center items-start prose dark:prose-dark">
-            <h2 class="text-2xl"><a class="cursor-pointer no-underline" href="/work/ringo-studio">Ringo Studio</a></h2>
+        <div class="md:w-2/5 flex flex-col justify-center items-start">
+            <h2 class="text-2xl mt-0"><a class="cursor-pointer no-underline" href="/work/ringo-studio">Ringo Studio</a></h2>
             <p>A beautiful, immersive Wordpress site and web store built for an architecural design firm in New York.</p>        
             {% pillbutton page, 'View project', '/work/ringo-studio/' %} 
         </div>
     </div>    
 </div>
-<div class="mb-16 md:mb-32 full-width px-4">
+<div class="mb-16 md:mb-32 full-width px-4 mx-auto">
     <div class="flex flex-col md:flex-row-reverse items-center justify-between">
         <div class="w-full md:w-3/5 md:pl-12 pb-4">
             <img class="rounded-xl w-full mb-4" src="/assets/images/lightsource/image-3.jpg">        
         </div>
-        <div class="w-full md:w-2/5 flex flex-col justify-center items-start prose dark:prose-dark">
-            <h2 class="text-2xl"><a class="cursor-pointer no-underline" href="/work/lightsource">Lightsource</a></h2>
+        <div class="w-full md:w-2/5 flex flex-col justify-center items-start">
+            <h2 class="text-2xl mt-0"><a class="cursor-pointer no-underline" href="/work/lightsource">Lightsource</a></h2>
             <p>A custom Wordpress theme for a small SF arts business, with bespoke ecommerce functionality.</p>  
             {% pillbutton page, 'View Project', '/work/lightsource/' %}       
         </div>
     </div>    
 </div>
-<div class="mb-16 md:mb-32 full-width px-4">
+<div class="mb-16 md:mb-32 full-width px-4 mx-auto">
     <div class="flex flex-col md:flex-row items-center justify-between">
         <div class="w-full md:w-3/5 md:pr-12 pb-4">
             <img class="rounded-xl w-full mb-4" src="/assets/images/ucwaterportal/image-1.jpg">        
         </div>
-        <div class="w-full md:w-2/5 flex flex-col justify-center items-start prose dark:prose-dark">
-            <h2 class="text-2xl"><a class="cursor-pointer no-underline" href="/work/uc-water-portal">UC Berkeley Water Research and Opportunities Portal</a></h2>
+        <div class="w-full md:w-2/5 flex flex-col justify-center items-start">
+            <h2 class="text-2xl mt-0"><a class="cursor-pointer no-underline" href="/work/uc-water-portal">UC Berkeley Water Research and Opportunities Portal</a></h2>
             <p class="text-lg">A directory for UC Berkeley students interested in finding water-related research, classes and opportunities.</p>        
             {% pillbutton page, 'View project', '/work/uc-water-portal/' %}         </div>
     </div>    
 </div>
-<div class="flex flex-col items-center  text-center p-8 full-width">
+<div class="flex flex-col items-center  text-center p-8 full-width mx-auto">
     {% pillbutton page, 'View All Work', '/work/everything/' %} 
     <div class="pt-4">— or —</div>
     <div class="flex flex-col md:flex-row gap-4 mt-4">
