--- a/src/index.njk
+++ b/src/index.njk
@@ -10,7 +10,7 @@ title: Home
 
 <!-- <h2 class="text-xl uppercase py-12 font-bold mx-auto text-center">Featured Work</h2> -->
 
-<div class="mt-24 mb-16 md:mb-32 full-width px-4 mx-auto">
+<div class="mt-12 mb-16 md:mb-32 full-width px-4 mx-auto">
     <div class="flex flex-col md:flex-row items-center justify-between">
         <div class="md:w-3/5 md:pr-12 pb-4">
             <img class="rounded-xl w-full mb-4" src="/assets/images/ringo/image-1.jpg">        
@@ -29,7 +29,7 @@ title: Home
         </div>
         <div class="w-full md:w-2/5 flex flex-col justify-center items-start">
             <h2 class="text-2xl mt-0"><a class="cursor-pointer no-underline" href="/work/lightsource">Lightsource</a></h2>
-            <p>A custom Wordpress theme for a small SF arts business, with bespoke ecommerce functionality.</p>  
+            <p>A custom Wordpress theme for a small SF arts business, with custom ecommerce functionality.</p>  
             {% pillbutton page, 'View Project', '/work/lightsource/' %}       
         </div>
     </div>    
