--- a/src/work.njk
+++ b/src/work.njk
@@ -8,7 +8,7 @@ pagination:
 permalink: /work/{{ tag }}/
 ---
 
-<h1 class="text-5xl mb-6">{{ title }}</h1>
+<h1 class="text-5xl mb-6 hidden">{{ title }}</h1>
 <div class="flex flex-wrap gap-4 my-6">
     {% pillbutton page, 'Everything', '/work/everything/' %} 
     {% pillbutton page, 'Arts organizations', '/work/arts/' %}
