--- a/src/index.njk
+++ b/src/index.njk
@@ -10,7 +10,7 @@ title: Home
 
 <!-- <h2 class="text-xl uppercase py-12 font-bold mx-auto text-center">Featured Work</h2> -->
 
-<div class="mt-12 mb-16 md:mb-32 full-width px-4 mx-auto">
+<div class="mt-12 mb-16 md:mb-24 full-width mx-auto">
     <div class="flex flex-col md:flex-row items-center justify-between">
         <div class="md:w-3/5 md:pr-12 pb-4">
             <img class="rounded-xl w-full mb-4" src="/assets/images/ringo/image-1.jpg">        
@@ -22,7 +22,7 @@ title: Home
         </div>
     </div>    
 </div>
-<div class="mb-16 md:mb-32 full-width px-4 mx-auto">
+<div class="mb-16 md:mb-24 full-width mx-auto">
     <div class="flex flex-col md:flex-row-reverse items-center justify-between">
         <div class="w-full md:w-3/5 md:pl-12 pb-4">
             <img class="rounded-xl w-full mb-4" src="/assets/images/lightsource/image-3.jpg">        
@@ -34,7 +34,7 @@ title: Home
         </div>
     </div>    
 </div>
-<div class="mb-16 md:mb-32 full-width px-4 mx-auto">
+<div class="mb-16 md:mb-24 full-width mx-auto">
     <div class="flex flex-col md:flex-row items-center justify-between">
         <div class="w-full md:w-3/5 md:pr-12 pb-4">
             <img class="rounded-xl w-full mb-4" src="/assets/images/ucwaterportal/image-1.jpg">        
