--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -225,6 +225,15 @@ figcaption {
 
   } */
 
+  .dot {
+    @apply rounded-full w-8 h-8 border border-red-500 dark:border-red-500;
+  }
+
+  .dot.active {
+    @apply bg-red-500 dark:bg-red-500;
+  
+  }
+
 
 
 a.pill-button {
