add homepage case study callout, add casestudy anchors and intro

--- a/src/index.njk
+++ b/src/index.njk
@@ -7,8 +7,16 @@ title: Home
     {% bigtext %}Web development focused on helping arts and environmental organizations, non-profits and small businesses communicate online.{% endbigtext %}
 </div>
 
+<div class="border border-blue-800 dark:border-blue-400 rounded-xl p-4 my-12 flex items-start gap-8">
+    <img class="w-1/3 m-0 rounded-lg" src="/assets/images/cckw/figma-grid.jpg" />
+    <div class="w-2/3">
+        <div class="bg-red-500 text-white inline-block text-sm rounded-full py-1 px-2 uppercase">Case Study</div>
+        <p class="text-2xl my-4 leading-relaxed">Check out an in-depth article that reviews the entire decision making process in each step of a recent project.</p>
+        <a href="/blog/cckw">Read the case study</a>
+    </div>
+</div>
 
-<!-- <h2 class="text-xl uppercase py-12 font-bold mx-auto text-center">Featured Work</h2> -->
+<h2 class="text-3xl uppercase pt-12 font-semibold mx-auto text-center">Featured Work</h2>
 
 <div class="mt-12 mb-16 md:mb-24 full-width mx-auto">
     <div class="flex flex-col md:flex-row items-center justify-between">
