--- a/src/index.njk
+++ b/src/index.njk
@@ -21,12 +21,12 @@ title: Home
 <div class="mt-12 mb-16 md:mb-24 full-width mx-auto">
     <div class="flex flex-col md:flex-row items-center justify-between">
         <div class="md:w-3/5 md:pr-12 pb-4">
-            <img class="rounded-xl w-full mb-4" src="/assets/images/ringo/image-1.jpg">        
+            <img class="rounded-xl w-full mb-4" src="/assets/images/cckw/image-1.jpg">        
         </div>
         <div class="md:w-2/5 flex flex-col justify-center items-start">
-            <h2 class="text-2xl mt-0"><a class="cursor-pointer no-underline" href="/work/ringo-studio">Ringo Studio</a></h2>
-            <p>A beautiful, immersive Wordpress site and web store built for an architecural design firm in New York.</p>        
-            {% pillbutton page, 'View project', '/work/ringo-studio/' %} 
+            <h2 class="text-2xl mt-0"><a class="cursor-pointer no-underline" href="/work/cckw">Chen Chen & Kai Williams</a></h2>
+            <p>A simple, thoughtful site for a New York design agency, built to be easy to use and long lasting.</p>        
+            {% pillbutton page, 'View project', '/work/cckw/' %} 
         </div>
     </div>    
 </div>
