add some footer links, add photo, rearrange homepage case study link

--- a/src/index.njk
+++ b/src/index.njk
@@ -7,48 +7,45 @@ title: Home
     {% bigtext %}Web development focused on helping arts and environmental organizations, non-profits and small businesses communicate online.{% endbigtext %}
 </div>
 
-<div class="border border-blue-800 dark:border-blue-400 rounded-xl p-4 my-12 flex items-start gap-8">
-    <img class="w-1/3 m-0 rounded-lg" src="/assets/images/cckw/figma-grid.jpg" />
-    <div class="w-2/3">
-        <div class="bg-red-500 text-white inline-block text-sm rounded-full py-1 px-2 uppercase">Case Study</div>
-        <p class="text-2xl my-4 leading-relaxed">Check out an in-depth article that reviews the entire decision making process in each step of a recent project.</p>
-        <a href="/blog/cckw">Read the case study</a>
-    </div>
-</div>
+
 
 <h2 class="text-3xl uppercase pt-12 font-semibold mx-auto text-center">Featured Work</h2>
 
 <div class="mt-12 mb-16 md:mb-24 full-width mx-auto">
-    <div class="flex flex-col md:flex-row items-center justify-between">
+    <div class="flex flex-col md:flex-row items-start justify-between">
         <div class="md:w-3/5 md:pr-12 pb-4">
-            <img class="rounded-xl w-full mb-4" src="/assets/images/cckw/image-1.jpg">        
+            <img class="rounded-xl w-full mb-4 mt-0" src="/assets/images/cckw/image-1.jpg">        
         </div>
         <div class="md:w-2/5 flex flex-col justify-center items-start">
-            <h2 class="text-2xl mt-0"><a class="cursor-pointer no-underline" href="/work/cckw">Chen Chen & Kai Williams</a></h2>
+            <h2 class="text-3xl mt-0"><a class="cursor-pointer no-underline" href="/work/cckw">Chen Chen & Kai Williams</a></h2>
             <p>A simple, thoughtful site for a New York design agency, built to be easy to use and long lasting.</p>        
             {% pillbutton page, 'View project', '/work/cckw/' %} 
+            <div class="border border-blue-800 dark:border-blue-400 rounded-xl p-4 my-12 flex flex-col items-start gap-2">
+                <div class="bg-red-500 text-white inline-block text-sm rounded-full py-1 px-2 uppercase">Case Study</div>
+                <a href="/blog/cckw">Read a case study about the making of the CCKW site.</a>
+            </div>            
         </div>
     </div>    
 </div>
 <div class="mb-16 md:mb-24 full-width mx-auto">
-    <div class="flex flex-col md:flex-row-reverse items-center justify-between">
+    <div class="flex flex-col md:flex-row-reverse items-start justify-between">
         <div class="w-full md:w-3/5 md:pl-12 pb-4">
-            <img class="rounded-xl w-full mb-4" src="/assets/images/lightsource/image-3.jpg">        
+            <img class="rounded-xl w-full mb-4 mt-0" src="/assets/images/lightsource/image-3.jpg">        
         </div>
         <div class="w-full md:w-2/5 flex flex-col justify-center items-start">
-            <h2 class="text-2xl mt-0"><a class="cursor-pointer no-underline" href="/work/lightsource">Lightsource</a></h2>
+            <h2 class="text-3xl mt-0"><a class="cursor-pointer no-underline" href="/work/lightsource">Lightsource</a></h2>
             <p>A custom Wordpress theme for a small SF arts business, with custom ecommerce functionality.</p>  
             {% pillbutton page, 'View Project', '/work/lightsource/' %}       
         </div>
     </div>    
 </div>
 <div class="mb-16 md:mb-24 full-width mx-auto">
-    <div class="flex flex-col md:flex-row items-center justify-between">
+    <div class="flex flex-col md:flex-row items-start justify-between">
         <div class="w-full md:w-3/5 md:pr-12 pb-4">
-            <img class="rounded-xl w-full mb-4" src="/assets/images/ucwaterportal/image-1.jpg">        
+            <img class="rounded-xl w-full mb-4 mt-0" src="/assets/images/ucwaterportal/image-1.jpg">        
         </div>
         <div class="w-full md:w-2/5 flex flex-col justify-center items-start">
-            <h2 class="text-2xl mt-0"><a class="cursor-pointer no-underline" href="/work/uc-water-portal">UC Berkeley Water Research and Opportunities Portal</a></h2>
+            <h2 class="text-3xl mt-0"><a class="cursor-pointer no-underline" href="/work/uc-water-portal">UC Berkeley Water Research and Opportunities Portal</a></h2>
             <p class="text-lg">A directory for UC Berkeley students interested in finding water-related research, classes and opportunities.</p>        
             {% pillbutton page, 'View project', '/work/uc-water-portal/' %}         </div>
     </div>    
