clean up mobile footer

--- a/src/index.njk
+++ b/src/index.njk
@@ -36,7 +36,7 @@ title: Home
         </div>
         <div class="w-full md:w-2/5 flex flex-col justify-center items-start">
             <h2 class="text-3xl mt-0"><a class="cursor-pointer no-underline" href="/work/lightsource">Lightsource</a></h2>
-            <p>A custom Wordpress theme for a small SF arts business, with custom ecommerce functionality.</p>  
+            <p>A Wordpress theme for a small SF arts business, with custom ecommerce functionality.</p>  
             {% pillbutton page, 'View Project', '/work/lightsource/' %}       
         </div>
     </div>    
