--- a/src/_includes/job.njk
+++ b/src/_includes/job.njk
@@ -5,7 +5,7 @@ layout: layout.njk
 
 <div class="flex flex-col gap-8 mb-16">
     <div class="mt-4">
-        <h1 class="text-4xl font-extraligh mb-4">{{ title }}</h1>      
+        <h1 class="text-5xl font-extraligh mb-4 instrument-serif">{{ title }}</h1>      
         <span>{{ tech }}, {{ year }}</span>    
     </div>
 
