--- a/src/index.njk
+++ b/src/index.njk
@@ -1,16 +1,39 @@
 ---
-layout: page.njk
+layout: layout.njk
 title: Home
 ---
 
-<div class="full-width flex flex-col md:flex-row gap-8 items-center md:px-12">
+<div class="full-width flex flex-col md:flex-row gap-8 items-center my-12 p-4">
     <div class="w-full md:w-1/2">
         {% bigtext %}Web development in Oakland, CA, focused on helping arts and environmental organizations, non-profits and small businesses communicate online.{% endbigtext %}
     </div>        
-    <img class="w-full md:w-1/2" src="/assets/images/blockhead-1.png">
     
 </div>
+<div class="w-full full-width border-b border-blue-950">
+    {% set works = collections.work | sort(attribute='data.year') | reverse %}
+    {% for post in works %}
+    <a href="{{post.url}}" class="flex flex-row justify-between px-4 md:px-8 py-4 items-center gap-4 md:gap-8 w-full block border-t border-blue-950 hover:bg-gray-100 dark:hover:bg-blue-950 dark:border-gray-900 text-lg md:text-xl stroke-blue-900 hover:stroke-red-600 ">
+        
+        <div class="w-2/12 md:w-1/12">
+            {{post.data.year}}
+        </div>            
+        <div class="w-7/12 md:w-4/12 text-left">
+            {{post.data.title}}
+        </div>
+        
+        <div class="hidden md:w-3/12 md:block">
+            {{post.data.tech}}
+        </div>     
+        <div class="text-right">
+            →
+        </div>
 
+    </a>
+    {% endfor %}
+
+</div>
+
+<!-- 
 <h2 class="text-3xl uppercase pt-12 pb-12 font-semibold mx-auto text-center">Featured Work</h2>
 
 <div class="mt-12 mb-16 md:mb-24 full-width mx-auto">
@@ -60,7 +83,7 @@ title: Home
         <a class="" href="/work/business">Small Business</a>
         <a class="" href="/work/education">Education</a>
     </div>
-</div>
+</div> -->
 
 
 
