--- a/src/index.njk
+++ b/src/index.njk
@@ -4,15 +4,48 @@ title: Home
 ---
 
 <div class="full-width flex flex-col md:flex-row gap-8 items-center my-12 p-4">
-    <div class="w-full md:w-1/2">
+    <div class="w-full md:w-7/12">
         {% bigtext %}Web development in Oakland, CA, focused on helping arts and environmental organizations, non-profits and small businesses communicate online.{% endbigtext %}
     </div>        
-    
 </div>
-<div class="w-full full-width border-b border-blue-950">
+
+{% set works = collections.featured | sort(attribute='data.year') | reverse %}
+{% for post in works %}
+<div class="featured-work full-width mb-16 relative">
+    <div class="border-r top-fade max-sm:hidden"></div>
+    <div class="w-1/2 md:w-full border-r-0 md:border-r pl-4 p-2  text-2xl top-fade h-full relative float-left">
+        <div class="md:absolute left-4 bottom-2 instrument-serif">❋ Featured Work</div>
+        <div class="md:absolute right-4 bottom-2">
+            <span class="featured-prev cursor-pointer"><-</span>
+            <span class="featured-next cursor-pointer">-></span>
+        </div>        
+    </div>
+    <div class="w-1/3 md:w-full border-r-0 md:border-r pr-4 p-2 top-fade absolute right-0 text-end md:relative">
+    </div>
+    <div class="top-fade max-sm:hidden"></div>
+    <div class="border-t md:border-y border-r max-md:hidden"></div>
+    <div class="border-t md:border-y border-r p-4 featured-content flex flex-col">
+        <span class="instrument-serif text">{{loop.index}}/{{loop.length}}</span>        
+        <h3 class="font-bold pb-2 "><a href="{{post.url}}">{{post.data.title}}</a></h3>
+        <p>{{post.data.summary}}</p>
+        <a class=" mt-12 underline" href="{{post.url}}">view</a>
+    </div>
+    <div class="md:border-y md:border-r featured-image hello">
+        <img src="{{ post.data.image }}" alt="Chen Chen and Kai Williams">
+    </div>
+    <div class="border-t md:border-y max-sm:hidden"></div>
+    <div class="border-r bottom-fade max-sm:hidden"></div>
+    <div class="border-r bottom-fade max-sm:hidden"></div>
+    <div class="border-r bottom-fade max-sm:hidden"></div>
+    <div class="bottom-fade max-sm:hidden"></div>        
+</div>
+{% endfor %}
+
+{% bigtext %}<h1>All work</h1>{% endbigtext %}
+<div class="w-full full-width border-b border-gray-300">
     {% set works = collections.work | sort(attribute='data.year') | reverse %}
     {% for post in works %}
-    <a href="{{post.url}}" class="flex flex-row justify-between px-4 md:px-8 py-4 items-center gap-4 md:gap-8 w-full block border-t border-blue-950 hover:bg-gray-100 dark:hover:bg-blue-950 dark:border-gray-900 text-lg md:text-xl stroke-blue-900 hover:stroke-red-600 ">
+    <a href="{{post.url}}" class="flex flex-row justify-between px-4 md:px-8 py-4 items-center gap-4 md:gap-8 w-full block border-t border-gray-200 hover:bg-gray-100 dark:hover:bg-blue-950 dark:border-gray-300 text-lg md:text-xl stroke-blue-900 hover:stroke-red-600 ">
         
         <div class="w-2/12 md:w-1/12">
             {{post.data.year}}
@@ -32,6 +65,8 @@ title: Home
     {% endfor %}
 
 </div>
+
+
 
 <!-- 
 <h2 class="text-3xl uppercase pt-12 pb-12 font-semibold mx-auto text-center">Featured Work</h2>
