--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -317,3 +317,69 @@ a.pill-button {
 .prose.prose-page > .full-width {
     @apply max-w-7xl;
 }
+
+.featured-work {
+    @apply flex flex-col md:grid;
+  
+}
+
+@media (min-width: 768px) {
+    .featured-work {
+        grid-template-columns: 20px 350px auto 20px;    
+        grid-template-rows: 70px auto 70px;
+    }
+    
+    
+}  
+
+
+
+.featured-work div {
+    @apply border-gray-200;
+
+}
+
+.featured-work .top-fade {
+    border-image: 
+    linear-gradient(
+      to top, 
+      rgb(229 231 235), 
+    rgba(0, 0, 0, 0)
+    ) 1 100%;    
+}
+
+.featured-work .bottom-fade {
+    border-image: 
+    linear-gradient(
+      to bottom, 
+      rgb(229 231 235), 
+    rgba(0, 0, 0, 0)
+    ) 1 100%;    
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade-out {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+.fade-in {
+  animation: fade-in 0.5s forwards;
+}
+
+.fade-out {
+  animation: fade-out 0.5s forwards;
+}
+
