--- a/src/index.njk
+++ b/src/index.njk
@@ -8,7 +8,7 @@ title: Home
         {% bigtext %}Web development in Oakland, CA, focused on helping arts and environmental organizations, non-profits and small businesses communicate online.{% endbigtext %}
     </div>        
 </div>
-
+<div>
 {% set works = collections.featured | sort(attribute='data.year') | reverse %}
 {% for post in works %}
 <div class="featured-work full-width mb-16 relative">
@@ -24,14 +24,18 @@ title: Home
     </div>
     <div class="top-fade max-sm:hidden"></div>
     <div class="border-t md:border-y border-r max-md:hidden"></div>
-    <div class="border-t md:border-y border-r p-4 featured-content flex flex-col">
-        <span class="instrument-serif text">{{loop.index}}/{{loop.length}}</span>        
-        <h3 class="font-bold pb-2 "><a href="{{post.url}}">{{post.data.title}}</a></h3>
-        <p>{{post.data.summary}}</p>
-        <a class=" mt-12 underline" href="{{post.url}}">view</a>
+    <div class="border-t md:border-y border-r p-4  flex flex-col">
+        <div class="featured-content">
+            <span class="instrument-serif text">{{loop.index}}/{{loop.length}}</span>        
+            <h3 class="font-bold pb-2 "><a href="{{post.url}}">{{post.data.title}}</a></h3>
+            <p>{{post.data.summary}}</p>
+            <a class=" mt-12 underline" href="{{post.url}}">view</a>
+        </div>
     </div>
-    <div class="md:border-y md:border-r featured-image hello">
-        <img src="{{ post.data.image }}" alt="Chen Chen and Kai Williams">
+    <div class="md:border-y md:border-r">
+        <div class="featured-image">
+            <img class="" src="{{ post.data.image }}" alt="{{post.data.title}}">
+        </div>
     </div>
     <div class="border-t md:border-y max-sm:hidden"></div>
     <div class="border-r bottom-fade max-sm:hidden"></div>
@@ -40,31 +44,8 @@ title: Home
     <div class="bottom-fade max-sm:hidden"></div>        
 </div>
 {% endfor %}
-
-{% bigtext %}<h1>All work</h1>{% endbigtext %}
-<div class="w-full full-width border-b border-gray-300">
-    {% set works = collections.work | sort(attribute='data.year') | reverse %}
-    {% for post in works %}
-    <a href="{{post.url}}" class="flex flex-row justify-between px-4 md:px-8 py-4 items-center gap-4 md:gap-8 w-full block border-t border-gray-200 hover:bg-gray-100 dark:hover:bg-blue-950 dark:border-gray-300 text-lg md:text-xl stroke-blue-900 hover:stroke-red-600 ">
-        
-        <div class="w-2/12 md:w-1/12">
-            {{post.data.year}}
-        </div>            
-        <div class="w-7/12 md:w-4/12 text-left">
-            {{post.data.title}}
-        </div>
-        
-        <div class="hidden md:w-3/12 md:block">
-            {{post.data.tech}}
-        </div>     
-        <div class="text-right">
-            →
-        </div>
-
-    </a>
-    {% endfor %}
-
 </div>
+
 
 
 
