--- a/src/index.njk
+++ b/src/index.njk
@@ -8,10 +8,10 @@ title: Home
         {% bigtext %}Web development in Oakland, CA, focused on helping arts and environmental organizations, non-profits and small businesses communicate online.{% endbigtext %}
     </div>        
 </div>
-<div>
+<div class="full-width">
 {% set works = collections.featured | sort(attribute='data.year') | reverse %}
 {% for post in works %}
-<div class="featured-work full-width mb-16 relative">
+<div class="featured-work mb-16 relative">
     <div class="border-r top-fade max-sm:hidden"></div>
     <div class="w-1/2 md:w-full border-r-0 md:border-r pl-4 p-2  text-2xl top-fade h-full relative float-left">
         <div class="md:absolute left-4 bottom-2 instrument-serif">❋ Featured Work</div>
@@ -29,7 +29,7 @@ title: Home
             <span class="instrument-serif text">{{loop.index}}/{{loop.length}}</span>        
             <h3 class="font-bold pb-2 "><a href="{{post.url}}">{{post.data.title}}</a></h3>
             <p>{{post.data.summary}}</p>
-            <a class=" mt-12 underline" href="{{post.url}}">view</a>
+            <a class="block mt-12 underline" href="{{post.url}}">view</a>
         </div>
     </div>
     <div class="md:border-y md:border-r">
